[package]
name = "part-mount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
libc = "0.2.147"
libparted = "0.1.5"
loopdev = "0.4.0"
sys-mount = "2.0.2"
