[package]
name = "part-mount"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "part-mount"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
libc = "0.2.147"
libparted = "0.1.5"
loopdev = { git = "https://github.com/mdaffin/loopdev.git", rev = "c9f91e8f0326ce8a3364ac911e81eb32328a5f27" }
sys-mount = "2.0.2"
